# sandbox-sqlx

./: Cargo.toml  README.md
.cargo/: config.toml
migrations/: 0001_init.sql  0002_bootstrap.sql
migrations/postgres/: 0001_init.sql  0002_bootstrap.sql
migrations/sqlite/: 0001_init.sql  0002_bootstrap.sql
src/: main.rs
